# waialae-auto-splitter

./: .gitignore  Cargo.toml  README.md  appveyor.yml  waialae-auto-splitter.bat
src/: main.rs
