[package]
name = "waialae_auto_splitter"
version = "0.1.0"
authors = ["sg4e <46875746+sg4e@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5"
winapi = { version = "0.3.8", features = ["winuser", "windef"] }